<resources>
    <string name="app_name">Uts</string>
    <string name="welcome">Selamat Datang</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="kilo">Kilo</string>
    <string name="button_convert">Convert</string>
    <string name="button_clear">Clear</string>
    <string name="gram">Gram</string>
    <string name="ton">Ton</string>

    <string name="slide_1_title">Kilo to Gram!</string>
    <string name="slide_1_desc">Convert Kilo to Gram!</string>

    <string name="slide_2_title">Kilo to Ton</string>
    <string name="slide_2_desc">Convert Kilo to Ton!</string>

    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>

    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
