<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.KiloToGramFragment">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/layout_kilo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:padding="10dp">
            <TextView
                android:id="@+id/kilo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:padding="12dp"
                android:text="@string/kilo"
                android:textSize="20sp"
                android:textStyle="bold" />
            <EditText
                android:id="@+id/text_kilo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/app_name" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/button_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_kilo"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/button_convert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center|center_horizontal"
                android:padding="16dp"
                android:text="@string/button_convert"
                android:layout_marginRight="1dp"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/button_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center|center_horizontal"
                android:padding="16dp"
                android:layout_marginLeft="1dp"
                android:text="@string/button_clear"
                android:layout_weight="1"/>
        </LinearLayout>


        <TextView
            android:id="@+id/gram"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_layout"
            android:layout_weight="0"
            android:padding="12dp"
            android:text="@string/gram"
            android:textSize="20sp"
            android:textStyle="bold" />


    </RelativeLayout>
</FrameLayout>